[gd_scene load_steps=8 format=3 uid="uid://bs86s78t21v4j"]

[ext_resource type="FontFile" uid="uid://bd8eo6wiwrb8e" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="1_h70ws"]
[ext_resource type="LabelSettings" uid="uid://smpev6we33sb" path="res://Scenes/lg_32_green.tres" id="1_ic8d7"]
[ext_resource type="Script" path="res://Scenes/GameUI/game_ui.gd" id="1_wcb5j"]
[ext_resource type="LabelSettings" uid="uid://3c7djduvd1hq" path="res://Scenes/lg_96_orange.tres" id="3_md7gc"]
[ext_resource type="AudioStream" uid="uid://ciex1oqqcwb5d" path="res://assets/audio/jazzyfrenchy.mp3" id="4_7vu67"]

[sub_resource type="LabelSettings" id="LabelSettings_yw7k0"]
font = ExtResource("1_h70ws")
font_size = 32
font_color = Color(0.54902, 0.780392, 0.960784, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_32mke"]
font = ExtResource("1_h70ws")
font_size = 72
font_color = Color(0.678431, 0.341176, 0.0235294, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wcb5j")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LevelLabel" type="Label" parent="MC/VBContainer"]
layout_mode = 2
text = "Level : 0"
label_settings = ExtResource("1_ic8d7")

[node name="AttemptsLabel" type="Label" parent="MC/VBContainer"]
layout_mode = 2
text = "Attempts : 0"
label_settings = SubResource("LabelSettings_yw7k0")

[node name="VBContainer2" type="VBoxContainer" parent="MC"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameComplete" type="Label" parent="MC/VBContainer2"]
layout_mode = 2
text = "Level Complete!!!"
label_settings = ExtResource("3_md7gc")

[node name="GameComplete2" type="Label" parent="MC/VBContainer2"]
layout_mode = 2
text = "Press Space"
label_settings = SubResource("LabelSettings_32mke")
horizontal_alignment = 1

[node name="GameCompleteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7vu67")
